[MT-4930] Fix caret not visible in Image block caption input

--- a/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
+++ b/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
@@ -4,7 +4,6 @@
 .outer {
     @include editor-v4-block($void: false);
     position: relative;
-    caret-color: transparent;
 
     &.extendedHitArea {
         $area-vertical-expansion: $spacing-3; // x2 if counted in both directions: up & down
@@ -16,6 +15,10 @@
             padding-top: $area-vertical-expansion;
             padding-bottom: $area-vertical-expansion;
         }
+    }
+
+    &.void {
+        caret-color: transparent;
     }
 
     &.void > .frame {
